# fast_delegate

./: CMakeLists.txt  LICENSE  README.md
fast_delegate/: CMakeLists.txt  LICENSE
fast_delegate/benchmark/: CMakeLists.txt
fast_delegate/benchmark/src/: benchmark.cpp
fast_delegate/fastdelegate/: CMakeLists.txt
fast_delegate/fastdelegate_hopter/: CMakeLists.txt  Hopter.cpp
fast_delegate/test/: CMakeLists.txt
fast_delegate_fixed/: CMakeLists.txt  CPPDelegates.cbp  CppDelegates.sln
fast_delegate_fixed/CppDelegates/: ArticleSamples.h  CMakeLists.txt  CppDelegates.vcxproj  CppDelegates.vcxproj.filters  DelegateDemo.h  stdafx.h
impossibly_fast_delegate/: CMakeLists.txt
impossibly_fast_delegate/benchmark/: CMakeLists.txt
impossibly_fast_delegate/test/: CMakeLists.txt
impossibly_fast_delegate/test/src/: BoostFunctionEventTest.cpp
impossibly_fast_delegate_fixed/CppDelegates/: Benchmark.h  CMakeLists.txt  DemoEntryPoint.cpp
